# mcbopomofo-core

./: CMakeLists.txt  CompilerSettings.cmake  README.md  build.sh  run-xgettext.sh
.github/workflows/: ci.yaml
src/: CMakeLists.txt  KeyHandler.cpp  KeyHandlerTest.cpp  Log.cpp  Log.h
src/Engine/: CMakeLists.txt
src/Engine/Mandarin/: CMakeLists.txt
src/Engine/gramambular2/: CMakeLists.txt
src/api/: .clang-format  LocalizedStrings.hpp  McBopomofoApi.cpp  McBopomofoApi.h  McBopomofoApiEnums.c  McBopomofoApiEnums.h  UserPhraseAdderProxy.hpp
